<resources>
    <string name="app_name">PoliticalResourceFinder</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_how_to_vote">How To Vote</string>
    <string name="title_find_polls">Find Your Polls</string>
    <string name="welcome_message">Welcome to Political Resource Finder!</string>
    <string name="welcome_instructions">Select a tab below to get started</string>
    <string name="get_started">Get Started</string>
    <string name="title_elections">Elections</string>
    <string name="title_settings">About</string>
    <string name="election_date_desc">Election Day is Tuesday, November 3rd 2020!</string>
    <string name="ballot_box_desc">A ballot entering a ballot box</string>
    <string name="how_button1">Register to Vote</string>
    <string name="how_button2">Early Voting</string>
    <string name="how_button3">Absentee Voting</string>
    <string name="how_button4">Eligibility</string>
    <string name="title_activity_scrolling_biography">ScrollingBiography</string>
    <string name="view_candidate_1_button">View Candidate 1</string>
    <string name="elections_national">National</string>
    <string name="elections_local">Local</string>
    <string name="elections_president">Presidential</string>
    <string name="elections_senate">Senate</string>
    <string name="elections_house">House</string>
    <string name="elections_governor">Governor</string>
    <string name="elections_mayor">Mayor</string>
    <string name="elections_council">City Council</string>
    <string name="about_text">
        "Political Resource Finder\n\n"

        "This app was developed by Jayden Alstad, Dain LaRock, Noah O'Brien, Xin Rao, Zac Tressel, "
        "and Nicholas Willette. The intention of the app is to provide quick and easy information "
        "for potential voters with hopes of improving voter turnout and helping people make "
        "informed decisions on Election Day.\n\n"

        "As of now, the app includes an interactive map where users can locate their polling "
        "places, a section with voting information such as registration and early voting, and a "
        "section with information about candidates for several different national and local "
        "elections. The information currently provided is a placeholder for real information that "
        "would eventually be sourced from official government and candidate websites.\n\n"

        "Future iterations of the app would include:\n"
        "- real time location and updated nearby polling places\n"
        "- implementation of the 'How to Vote' buttons\n"
        "- real candidate information for upcoming elections, including links to candidate websites"
        "\n- this tab becoming a social platform for users to share political information, compete "
        "in political trivia with friends, follow news surrounding particular candidates, etc."
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>